test/errors/scope-resolution/duplicateEnumElement.chpl
enum languagesILike {
  chapel, cpp, haskell,
  chapel, chapel
}
var chpl = languagesILike.chapel;
